IE fixes to layout, spacing, and content/row wrapping

--- a/web/themes/custom/hm-public-theme/static/sass/shared/forms/_progress-bar.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/shared/forms/_progress-bar.scss
@@ -55,7 +55,7 @@
   font-weight: 400;
   justify-content: center;
   margin-right: em(15);
-  padding: 0 22px;
+  padding: 1em;
 
   &:last-of-type {
     margin-right: 0;
@@ -67,7 +67,7 @@
   background-color: color(dark-grey);
   color: $white;
   font-weight: 400;
-  padding: em(16) 0;
+  padding: 1em;
 }
 
 .checkout-progress--step:before { display: none; }
